--- a/TechStore/TechStore.Api/appsettings.json
+++ b/TechStore/TechStore.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TeechStore"
+        "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TechStore"
     }
 }
