--- a/TechStore/TechStore.Domain/TechStore.Domain.csproj
+++ b/TechStore/TechStore.Domain/TechStore.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Microsoft.ServiceFabric" Version="11.0.2707" />
   </ItemGroup>
 
 </Project>
