--- a/TechStore/TechStore.Domain/TechStore.Domain.csproj
+++ b/TechStore/TechStore.Domain/TechStore.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.4" />
     <PackageReference Include="Microsoft.ServiceFabric" Version="11.0.2707" />
   </ItemGroup>
