--- a/TechStore/TechStore.Api/appsettings.json
+++ b/TechStore/TechStore.Api/appsettings.json
@@ -5,8 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TechStore"
-    }
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TechStore"
+  },
+  "FrontendUrl": "http://localhost:4200",
+  "JwtConfiguration": {
+    "Issuer": "TechStoreIdentity",
+    "Audience": "TechStoreApi",
+    "SecretKey": "sdf23fsdf23frg243grg43gsdfgq23g4gwergq34gsdgq43greg43ggfg"
+  }
 }
